<resources>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="no_network_connection">No network connection</string>
    <string name="server_is_currently_busy">Server is currently busy. Please try again later.</string>
    <string name="socket_time_out_text">Something went wrong. Please try again later.</string>
    <string name="ok">OK</string>

    <!--Login-->
    <string name="login_to_zero">Login to ZERO</string>
    <string name="login">Login</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <!--Bottom bar-->
    <string name="feed">Feed</string>
    <string name="library">Library</string>
    <string name="analytics">Analytics</string>
    <string name="chat">Chat</string>
    <string name="people">People</string>

    <!--Drawer-->
    <string name="teams">Teams</string>
    <string name="profile">My Profile</string>
    <string name="logout">Logout</string>
</resources>
