<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_feed"
        android:enabled="true"
        android:icon="@drawable/ic_feed"
        android:title="@string/feed"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_library"
        android:enabled="true"
        android:icon="@drawable/ic_library"
        android:title="@string/library"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_chat"
        android:enabled="true"
        android:icon="@drawable/ic_chat"
        android:title="@string/chat"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_analytics"
        android:enabled="true"
        android:icon="@drawable/ic_analytics"
        android:title="@string/analytics"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_people"
        android:enabled="true"
        android:icon="@drawable/ic_people"
        android:title="@string/people"
        app:showAsAction="ifRoom" />
</menu>